Set autorestart to unexpected

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -12,7 +12,7 @@ command=/usr/bin/dbus-daemon --session
 priority=1
 numprocs=1
 autostart=true
-autorestart=true
+autorestart=unexpected
 startsecs=1
 stderr_logfile=/dev/stderr
 stdout_logfile=/dev/stdout
@@ -23,7 +23,7 @@ stdout_logfile_maxbytes=0
 command=/bin/sh -c "set -o pipefail && /bin/sh /entrypoint.sh"
 numprocs=1
 autostart=true
-autorestart=true
+autorestart=unexpected
 startsecs=10
 startretries=2147483647
 stderr_logfile=/dev/stderr
@@ -36,7 +36,7 @@ command=/usr/bin/tor -f /etc/tor/torrc --quiet --SocksPort 9050
 priority=2
 numprocs=1
 autostart=true
-autorestart=true
+autorestart=unexpected
 startsecs=1
 stderr_logfile=/dev/stderr
 stdout_logfile=/dev/stdout
@@ -48,7 +48,7 @@ command=/usr/bin/chromium-browser --headless --disable-gpu --no-sandbox --remote
 priority=2
 numprocs=1
 autostart=true
-autorestart=true
+autorestart=unexpected
 startsecs=1
 stderr_logfile=/dev/stderr
 stdout_logfile=/dev/stdout
@@ -59,7 +59,7 @@ stdout_logfile_maxbytes=0
 command=/usr/bin/socat %(ENV_SOCAT_OPTIONS)s tcp-listen:%(ENV_PORT)s,reuseaddr,fork,nonblock,nodelay tcp:localhost:%(ENV_WAYBACK_TOR_LOCAL_PORT)s
 numprocs=1
 autostart=true
-autorestart=true
+autorestart=unexpected
 startsecs=1
 stderr_logfile=/dev/stderr
 stdout_logfile=/dev/stdout
@@ -70,7 +70,7 @@ stdout_logfile_maxbytes=0
 command=/bin/sh -c 'sleep 60 && set -o pipefail && /bin/sh /cleaner.sh'
 numprocs=1
 autostart=true
-autorestart=true
+autorestart=unexpected
 startsecs=10
 startretries=2147483647
 stderr_logfile=/dev/stderr
