--- a/supervisord.conf
+++ b/supervisord.conf
@@ -21,6 +21,7 @@ stdout_logfile_maxbytes=0
 
 [program:wayback]
 command=/bin/sh -c "set -o pipefail && /bin/sh /entrypoint.sh"
+priority=2
 numprocs=1
 autostart=true
 autorestart=unexpected
@@ -57,6 +58,7 @@ stdout_logfile_maxbytes=0
 
 [program:forward]
 command=/usr/bin/socat %(ENV_SOCAT_OPTIONS)s tcp-listen:%(ENV_PORT)s,reuseaddr,fork,nonblock,nodelay tcp:localhost:%(ENV_WAYBACK_TOR_LOCAL_PORT)s
+priority=20
 numprocs=1
 autostart=true
 autorestart=unexpected
@@ -68,6 +70,7 @@ stdout_logfile_maxbytes=0
 
 [program:cleaner]
 command=/bin/sh -c 'sleep 60 && set -o pipefail && /bin/sh /cleaner.sh'
+priority=30
 numprocs=1
 autostart=true
 autorestart=unexpected
