Change loglevel to info

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,6 +1,6 @@
 [supervisord]
 pidfile=/wayback/supervisord.pid
-loglevel=warn
+loglevel=info
 logfile=/dev/stdout
 logfile_maxbytes=0
 nodaemon=true
