Run dbus with --nofork flag

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -8,7 +8,7 @@ nocleanup=false
 silent=true
 
 [program:dbus]
-command=/usr/bin/dbus-daemon --session
+command=/usr/bin/dbus-daemon --session --nofork
 priority=1
 numprocs=1
 autostart=true
