--- a/supervisord.conf
+++ b/supervisord.conf
@@ -45,7 +45,7 @@ stderr_logfile_maxbytes=0
 stdout_logfile_maxbytes=0
 
 [program:chromium]
-command=/usr/bin/chromium-browser --headless --disable-gpu --no-sandbox --remote-debugging-address=0.0.0.0 --remote-debugging-port=9222 --disable-dev-shm-usage --disable-translate --disable-extensions --disable-software-rasterizer --ignore-certificate-errors --disable-sync --use-fake-ui-for-media-stream --use-gl=swiftshader --hide-scrollbars --disable-default-apps --mute-audio --no-default-browser-check --no-first-run --disable-renderer-backgrounding --disable-backgrounding-occluded-windows --disable-background-timer-throttling --force-fieldtrials="*BackgroundTracing/default/" --user-agent="%(ENV_CHROMEDP_USER_AGENT)s"
+command=/usr/bin/chromium-browser --headless=new --disable-gpu --no-sandbox --remote-debugging-address=0.0.0.0 --remote-debugging-port=9222 --disable-dev-shm-usage --disable-translate --disable-extensions --disable-software-rasterizer --ignore-certificate-errors --disable-sync --use-fake-ui-for-media-stream --use-gl=swiftshader --hide-scrollbars --disable-default-apps --mute-audio --no-default-browser-check --no-first-run --disable-renderer-backgrounding --disable-backgrounding-occluded-windows --disable-background-timer-throttling --force-fieldtrials="*BackgroundTracing/default/" --user-agent="%(ENV_CHROMEDP_USER_AGENT)s"
 priority=2
 numprocs=1
 autostart=true
