--- a/supervisord.conf
+++ b/supervisord.conf
@@ -19,8 +19,21 @@ stdout_logfile=/dev/stdout
 stderr_logfile_maxbytes=0
 stdout_logfile_maxbytes=0
 
+[program:wireproxy]
+command=/bin/sh -c "set -o pipefail && /bin/sh /wireproxy.sh"
+priority=1
+numprocs=1
+autostart=true
+autorestart=unexpected
+startsecs=3
+startretries=2147483647
+stderr_logfile=/dev/stderr
+stdout_logfile=/dev/stdout
+stderr_logfile_maxbytes=0
+stdout_logfile_maxbytes=0
+
 [program:wayback]
-command=/bin/sh -c "set -o pipefail && /bin/sh /entrypoint.sh"
+command=/bin/sh -c "sleep 5 && set -o pipefail && /bin/sh /entrypoint.sh"
 priority=2
 numprocs=1
 autostart=true
