--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,17 +7,17 @@ nodaemon=true
 nocleanup=false
 silent=true
 
-[program:dbus]
-command=/usr/bin/dbus-daemon --session --nofork
-priority=1
-numprocs=1
-autostart=true
-autorestart=unexpected
-startsecs=1
-stderr_logfile=/dev/stderr
-stdout_logfile=/dev/stdout
-stderr_logfile_maxbytes=0
-stdout_logfile_maxbytes=0
+;[program:dbus]
+;command=/usr/bin/dbus-daemon --session --nofork
+;priority=1
+;numprocs=1
+;autostart=true
+;autorestart=unexpected
+;startsecs=1
+;stderr_logfile=/dev/stderr
+;stdout_logfile=/dev/stdout
+;stderr_logfile_maxbytes=0
+;stdout_logfile_maxbytes=0
 
 [program:wireproxy]
 command=/bin/sh -c "set -o pipefail && /bin/sh /wireproxy.sh"
